<resources>
    <string name="app_name">JubJub_Manager</string>
    <string name="press_back_to_finish_app">\'뒤로\' 버튼을 한번 더 누르시면 종료됩니다.</string>


<!--    SignIn Activity-->
    <string name="sign_in">Sign in</string>
    <string name="id_label">ID</string>
    <string name="enter_id">아이디를 입럭하세요.</string>
    <string name="pw_label">Password</string>
    <string name="enter_password">비밀번호를 입력하세요.</string>
    <string name="password_miss_notice">비밀번호를 잊으신 경우, 관리자에게 문의해주세요.</string>
    <string name="sign_in_button_text">로그인</string>
    <string name="invalid_input_id_blank">아이디를 입력해주세요.</string>
    <string name="invalid_input_pw_blank">비밀번호를 입력해주세요.</string>
<!--    SignIn Activity-->

<!--    Equipment List Activity-->
    <string name="search">검색</string>
    <string name="equipment_amount_status">수량 : %1$s/%2$s개</string>
<!--    Equipment List Activity-->

<!--    My Page Activity -->
    <string name="my_page">마이페이지</string>
    <string name="menu_add_equipment">기자재 추가</string>
    <string name="menu_logout">로그아웃</string>
    <string name="logout_complete">로그아웃 완료</string>
<!--    My Page Activity-->

<!--    Modify Equipment Activity-->
    <string name="add_equipment_page_title">추가하기</string>
    <string name="edit_equipment_page_title">수정하기</string>

    <string name="equipment_name_label">제품명</string>
    <string name="enter_equipment_name">제품명을 입력하세요.</string>
    <string name="equipment_max_amount_label">전체 수량</string>
    <string name="enter_equipment_max_amount">기자재 전체 보유 수량을 입력하세요.</string>
    <string name="equipment_current_amount_label">잔여 수량</string>
    <string name="enter_equipment_current_amount">대여 가능한 잔여 기자재 수량을 입력하세요.</string>
    <string name="equipment_category_label">카테고리</string>
    <string name="equipment_category_item">기자재 카테고리</string>

    <string name="add_equipment_button_text">추가</string>
    <string name="edit_equipment_button_text">수정</string>
<!--    Modify Equipment Activity-->




</resources>