<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="ac"
            type="com.depotato.jubjub_manager.view.modify_equipment.edit.EditEquipmentActivity" />
        <variable
            name="vm"
            type="com.depotato.jubjub_manager.view.modify_equipment.edit.EditEquipmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".view.modify_equipment.edit.EditEquipmentActivity">

        <TextView
            style="@style/TextView_pageTitle"
            android:text="@string/edit_equipment_page_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline15" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView_equipmentImage"
            style="@style/AddImageButton"
            android:src="@drawable/ic_add_image_transparent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Dp"
            android:onClick="@{() -> ac.openGallery()}"
            app:layout_constraintStart_toStartOf="@+id/guideline17"
            app:layout_constraintTop_toTopOf="@+id/guideline16" />

        <ImageView
            style="@style/DeleteImageButton"
            android:id="@+id/imageView_deleteImage"
            android:onClick="@{() -> ac.removeImage()}"
            app:layout_constraintBottom_toTopOf="@+id/imageView_equipmentImage"
            app:layout_constraintEnd_toEndOf="@+id/imageView_equipmentImage"
            app:layout_constraintStart_toEndOf="@+id/imageView_equipmentImage"
            app:layout_constraintTop_toTopOf="@+id/imageView_equipmentImage" />


        <TextView
            android:id="@+id/textView_name"
            style="@style/EquipmentInfoTitle"
            android:layout_marginTop="35dp"
            android:text="@string/equipment_name_label"
            app:layout_constraintStart_toStartOf="@+id/guideline17"
            app:layout_constraintTop_toBottomOf="@+id/imageView_equipmentImage" />

        <EditText
            android:id="@+id/editText_name"
            style="@style/EquipmentInfoContents"
            android:hint="@string/enter_equipment_name"
            android:text="@={vm.equipmentName}"
            app:layout_constraintEnd_toStartOf="@+id/guideline18"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/guideline17"
            app:layout_constraintTop_toBottomOf="@+id/textView_name" />


        <TextView
            android:id="@+id/textView_max_amount"
            style="@style/EquipmentInfoTitle"
            android:text="@string/equipment_max_amount_label"
            app:layout_constraintStart_toStartOf="@+id/guideline17"
            app:layout_constraintTop_toBottomOf="@+id/editText_name" />

        <EditText
            android:id="@+id/editText_max_amount"
            style="@style/EquipmentInfoContents"
            android:hint="@string/enter_equipment_max_amount"
            android:inputType="number"
            android:text="@={vm.equipmentMaxAmount}"
            app:layout_constraintEnd_toStartOf="@+id/guideline18"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/guideline17"
            app:layout_constraintTop_toBottomOf="@+id/textView_max_amount" />

        <TextView
            android:id="@+id/textView_current_amount"
            style="@style/EquipmentInfoTitle"
            android:text="@string/equipment_current_amount_label"
            app:layout_constraintStart_toStartOf="@+id/guideline17"
            app:layout_constraintTop_toBottomOf="@+id/editText_max_amount" />

        <EditText
            android:id="@+id/editText_current_amount"
            style="@style/EquipmentInfoContents"
            android:hint="@string/enter_equipment_current_amount"
            android:inputType="number"
            android:text="@={vm.equipmentCurrentAmount}"
            app:layout_constraintEnd_toStartOf="@+id/guideline18"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/guideline17"
            app:layout_constraintTop_toBottomOf="@+id/textView_current_amount" />


        <TextView
            android:id="@+id/textView_category"
            style="@style/EquipmentInfoTitle"
            android:text="@string/equipment_category_label"
            app:layout_constraintStart_toStartOf="@+id/guideline17"
            app:layout_constraintTop_toBottomOf="@+id/editText_current_amount" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_category"
            style="@style/CategorySpinner"
            android:onItemSelected="@{(parent, view, position, id) -> ac.onCategoryItemSelected(parent, position)}"
            app:layout_constraintStart_toStartOf="@+id/guideline17"
            app:layout_constraintTop_toBottomOf="@+id/textView_category" />

        <View
            android:id="@+id/view"
            style="@style/SpinnerDivider"
            app:layout_constraintBottom_toBottomOf="@+id/spinner_category"
            app:layout_constraintEnd_toEndOf="@+id/spinner_category"
            app:layout_constraintTop_toTopOf="@+id/spinner_category" />

        <ImageView
            style="@style/IC_dropdown"
            app:layout_constraintBottom_toBottomOf="@+id/spinner_category"
            app:layout_constraintEnd_toEndOf="@+id/spinner_category"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/spinner_category" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_addEquipment"
            style="@style/AddEquipmentButton"
            android:text="@string/edit_equipment_button_text"
            android:onClick="@{() -> ac.editEquipment()}"
            app:layout_constraintBottom_toTopOf="@+id/guideline19"
            app:layout_constraintEnd_toStartOf="@+id/guideline18" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline15"
            style="@style/GuideLine_Horizontal"
            app:layout_constraintGuide_percent="0.021" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline16"
            style="@style/GuideLine_Horizontal"
            app:layout_constraintGuide_percent="0.099" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline19"
            style="@style/GuideLine_Horizontal"
            app:layout_constraintGuide_percent="0.936" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline17"
            style="@style/GuideLine_Vertical"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline18"
            style="@style/GuideLine_Vertical"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
